# rust-time-gestion

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
tests/: test_integration.rs
tests/data/client_1/: attendu_1.txt  client.txt  client_1.txt  hors_client_1.txt
tests/data/client_2/: attentu_2.txt  client.txt  hors_client_2.txt
tests/data/client_3/: attentu.txt  client.txt  hors_client.txt
